docs/tests/nameres/expressions/valid/Ternary.src
// Valid 

let int x = 3, y = 2;
let int a = x == y ? x : y;