docs/tests/nameres/expressions/invalid/VectorVar.src
// Invalid

let int x = 4;
let vec<i64, x> = { 1, 2, 3, 4 };